<resources>
    <string name="app_name">Assignment #2</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="c">C</string>
    <string name="_0">0</string>
    <string name="quantity">Quantity</string>
    <string name="product_type">Product Type</string>
    <string name="buy">BUY</string>
    <string name="total">Total</string>
    <string name="item_name">Item Name</string>
    <string name="price">Price</string>
    <string name="qnt">quantity</string>
    <string name="history">HISTORY</string>
    <string name="restock">restock</string>
    <string name="enter_new_quantity">Enter New Quantity</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="enter_number_of_item">enter_number_of_item</string>
</resources>