<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:background="@drawable/background_bourder"
    android:layout_marginStart="@android:dimen/app_icon_size"
    android:layout_marginTop="10sp"
    android:layout_centerVertical="false"
    android:gravity="center"
  android:layout_centerInParent="true"
    android:layout_height="65dp">

    <LinearLayout
        android:layout_width="173dp"
        android:layout_height="wrap_content"

        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/item_name_In_Row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/item_name"
            android:textColor="@color/teal_200" />

        <TextView
            android:id="@+id/price_In_Row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/price"
            android:textColor="@color/white" />
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content">
    <TextView
        android:id="@+id/q"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:textColorHint="@color/DarkRed"
        android:padding="3dp"
        android:text="Available Quantity"
        android:textColor="@color/Red" />

        <TextView
            android:id="@+id/quantity_in_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/qnt"
            android:textColor="@color/white" />
    </LinearLayout>

    </LinearLayout>