<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Restock_Activity">

    <EditText
        android:id="@+id/NewQuantityRestock"
        android:padding="20dp"
        android:layout_marginTop="@android:dimen/app_icon_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:inputType="number"
        android:hint="@string/enter_number_of_item"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@android:dimen/app_icon_size"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/NewQuantityRestock">

        <Button
            android:id="@+id/OK_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="OK"
            android:text="@string/ok"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.562"
            tools:ignore="OnClick" />

        <Button
            android:id="@+id/restock_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="CANCEL"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.562"
            tools:ignore="OnClick" />
    </LinearLayout>

    <ListView
        android:id="@+id/list_ofRestock_product"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:padding="20dp"
        android:layout_marginTop="@android:dimen/app_icon_size"
        android:background="@color/Wheat"
        android:defaultFocusHighlightEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="1.0"
        tools:listitem="@android:layout/list_content" />
</androidx.constraintlayout.widget.ConstraintLayout>